adds image to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Talking to Pri</title>
   </head>
   <body>
-    
+    <h2>Olá! Estamos trabalhando para criar este site. Por favor, volte em breve!</h2>
+        <img src="./assets/LOGO-404-NOT-FOUND.png" alt="menina-que-perdeu-oculos-404-not-found" width="500" height="333">    
   </body>
 </html>
